--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# Core dependencies
 fastapi==0.104.1
 uvicorn==0.23.2
 sqlalchemy==2.0.23
@@ -11,3 +12,19 @@ python-multipart==0.0.6
 psycopg2-binary==2.9.9
 asyncpg==0.28.0
 httpx==0.25.1
+
+# Production dependencies
+celery==5.3.4
+redis==5.0.1
+flower==2.0.1  # Celery monitoring
+gunicorn==21.2.0  # Production WSGI server
+requests==2.31.0
+pytz==2023.3
+
+# Monitoring and logging
+sentry-sdk==1.32.0
+python-json-logger==2.0.7
+
+# AWS S3 integration (commented until credentials are available)
+# boto3==1.26.163
+# aiohttp==3.8.4
