--- a/Zodie/frontend/package.json
+++ b/Zodie/frontend/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.33.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
