--- a/Zodie/frontend/package.json
+++ b/Zodie/frontend/package.json
@@ -28,13 +28,14 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.12.2",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "node-releases": "^2.0.19",
     "react": "^19.1.0",
     "react-aria-components": "^1.9.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-social-icons": "^6.24.0",
     "react-use-measure": "^2.1.7",
