--- a/Zodie/frontend/tsconfig.app.json
+++ b/Zodie/frontend/tsconfig.app.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "../../app/workspace/WorkspaceDashboard.tsx"]
 }
